--- a/config/app_config.yml.sample
+++ b/config/app_config.yml.sample
@@ -30,5 +30,5 @@ production:
   ey_cookie_passport:
     public_key_path: /path/to/server's/eycp/public.pem
   eycp_domain: .enjoyoung.cn
-  eycp_root: 'http://openid.enjoyoung.cn'  
+  eycp_root: 'http://openid.enjoyoung.cn/'  
   eycp_register: 'http://openid.enjoyoung.cn/account/new'    
